# email2jira

./: .gitignore  CMakeLists.txt  README.md
src/: CertVerifierImpl.cpp  CertVerifierImpl.h  Email2JiraImpl.cpp  Email2JiraImpl.h  ImapAdapterImpl.cpp  ImapAdapterImpl.h  main.cpp
